--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/boo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boomers Precio y Volumen</title>
+    <title>Boomers Madrid 2025</title>
   </head>
   <body class="bg-gray-50">
     <div id="root"></div>
